welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: reassignment to val
  if (talking=true){
             ^parotTrouble:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if(7<=hour && hour<=20){
    ^